--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/chart.js/dist/Chart.js"
+              "./node_modules/chart.js/dist/Chart.js"
             ]
           },
           "configurations": {
